--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "patch-fixer"
-version = "0.1.3"
+version = "0.2.0"
 description = "Fixes erroneous git apply patches to the best of its ability."
 maintainers = [
     {name = "Alex Mueller", email="amueller474@gmail.com"},
@@ -20,6 +20,9 @@ classifiers = [
     'Programming Language :: Python :: 3 :: Only',
     'Topic :: Software Development',
 ]
+dependencies = [
+    "GitPython"
+]
 license = 'Apache-2.0'
 license-files = [
     'LICENSE'
@@ -28,6 +31,5 @@ license-files = [
 [project.optional-dependencies]
 test = [
     "pytest",
-    "GitPython",
     "requests"
 ]
