--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "patch-fixer"
-version = "0.3.0"
+version = "0.3.1"
 description = "Fixes erroneous git apply patches to the best of its ability."
 maintainers = [
     {name = "Alex Mueller", email="amueller474@gmail.com"},
@@ -34,6 +34,7 @@ license-files = [
 
 [project.optional-dependencies]
 test = [
+    "hypothesis",
     "pytest",
     "requests"
 ]
